--- a/client/sideMenu/sideMenu.html
+++ b/client/sideMenu/sideMenu.html
@@ -1,8 +1,11 @@
 <template name="sideMenu">
 		<ul class="nav nav-pills nav-stacked">
-			<li class="active"><a href="#">Home</a></li>
 			<li><a href="#">Menu 1</a></li>
-			<li><a href="#">Menu 2</a></li>
-			<li><a href="#">Menu 3</a></li>
+			<input type="text" id="language-box" class="form-control" placeholder="Select a langauge" />
+			{{#each getLanguages}}
+				<li>
+					{{hl}}
+				</li>
+			{{/each}}
 		</ul>
 </template>
