--- a/client/wordPage/wordPage.html
+++ b/client/wordPage/wordPage.html
@@ -3,8 +3,13 @@
 </template>
 
 <template name="videos">
-	{{#each getSources}}
-		
+	Test123
+	{{#each getData}}
+		<div class="panel panel-default">
+			<div class="panel-body">       
+				{{url}}
+			</div>
+		</div>
 	{{/each}}
 </template>
 
