Endringer på routes

--- a/client/wordPage/wordPage.html
+++ b/client/wordPage/wordPage.html
@@ -1,9 +1,9 @@
 <template name="wordPage">
+	{{test}}
 	{{> yield "category"}}
 </template>
 
 <template name="videos">
-	Test123
 	{{#each getData}}
 		<div class="panel panel-default">
 			<div class="panel-body">       
