--- a/client/wordPage/wordPage.html
+++ b/client/wordPage/wordPage.html
@@ -1,9 +1,11 @@
 <template name="wordPage">
-	{{test}}
+	{{category}}
+	{{_id}}
 	{{> yield "category"}}
 </template>
 
-<template name="videos">
+<template name="video">
+	1
 	{{#each getData}}
 		<div class="panel panel-default">
 			<div class="panel-body">       
