--- a/client/navCategory/navCategory.html
+++ b/client/navCategory/navCategory.html
@@ -1,16 +1,16 @@
 <template name="navCategory">
 	<ul class="nav nav-tabs">
-	  <li role="presentation" class="category-tab {{#if currentTab 'videos'}}active{{/if}}" id="videos">
-		{{#linkTo route="result" query="category=videos"}}
-			Videos
+	  <li role="presentation" class="category-tab {{#if currentTab 'video'}}active{{/if}}" id="video">
+		{{#linkTo route="wordPage" query="category=video"}}
+			Video
 		{{/linkTo}}
 	  </li>
 	  <li role="presentation" class="category-tab {{#if currentTab 'text'}}active{{/if}}" id="text">
-		{{#linkTo route="result" query="category=text"}}
+		{{#linkTo route="wordPage" query="category=text"}}
 			Text
 		{{/linkTo}}</li>
 	  <li role="presentation" class="category-tab {{#if currentTab 'images'}}active{{/if}}" id="images">
-		{{#linkTo route="result" query="category=images"}}
+		{{#linkTo route="wordPage" query="category=images"}}
 			Images
 		{{/linkTo}}</li>
 	</ul>
