--- a/client/searchResult/searchResult.html
+++ b/client/searchResult/searchResult.html
@@ -13,7 +13,7 @@
     {{#each getWords}}
     <div class="panel panel-default">
       <div class="panel-body">       
-        {{#linkTo route="wordPage" query=getCurrentTab}}
+        {{#linkTo route="result" query=getCurrentTab}}
           {{{word}}}
         {{/linkTo}}
       </div>
