--- a/client/navCategory/navCategory.html
+++ b/client/navCategory/navCategory.html
@@ -1,17 +1,17 @@
 <template name="navCategory">
 	<ul class="nav nav-tabs">
 	  <li role="presentation" class="category-tab {{#if currentTab 'video'}}active{{/if}}" id="video">
-		{{#linkTo route="wordPage" query="category=video"}}
+		{{#linkTo route="result" query="category=video"}}
 			Video
 		{{/linkTo}}
 	  </li>
 	  <li role="presentation" class="category-tab {{#if currentTab 'text'}}active{{/if}}" id="text">
-		{{#linkTo route="wordPage" query="category=text"}}
+		{{#linkTo route="result" query="category=text"}}
 			Text
 		{{/linkTo}}</li>
-	  <li role="presentation" class="category-tab {{#if currentTab 'images'}}active{{/if}}" id="images">
-		{{#linkTo route="wordPage" query="category=images"}}
-			Images
+	  <li role="presentation" class="category-tab {{#if currentTab 'image'}}active{{/if}}" id="image">
+		{{#linkTo route="result" query="category=image"}}
+			Image
 		{{/linkTo}}</li>
 	</ul>
 </template>
