Fikset videre på urlPage

--- a/client/urlPage/urlPage.html
+++ b/client/urlPage/urlPage.html
@@ -1,3 +1,8 @@
 <template name="urlPage">
-	Blablabalbalblblblbl
+	<div class="page-header">
+		{{#with getData}}
+			<a href="{{url}}"><h3>{{url}}</h3></a>
+			
+		{{/with}}
+	</div>
 </template>
