--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -11,7 +11,7 @@
 	      </button>
 	      <form class="navbar-form navbar-left" role="search">
 	        <div class="form-group">
-	          {{> searchBox}}
+						{{> EasySearch.Input index=wordsIndex}}
 	        </div>
 	      </form>
 	    </div>
@@ -19,8 +19,8 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="{{pathFor route="newWord"}}">New word</a></li>
-	        <li><a href="{{pathFor route="newUrl"}}">New link</a></li>
+	        <li><a href="{{pathFor route="newWord"}}">{{_ "new_word"}}</a></li>
+	        <li><a href="{{pathFor route="newUrl"}}">{{_ "new_url"}}</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
@@ -36,10 +36,6 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-</template>
-
-<template name="searchBox">
-    <input type="text" id="search-box" class="form-control" placeholder="Search for a word" />
 </template>
 
 <template name="menuBtns">
