Added multi-language support. Added search function for languages.

--- a/client/newUrl/newUrl.html
+++ b/client/newUrl/newUrl.html
@@ -6,6 +6,7 @@
 				{{> afQuickField name="description"}}
 				{{> afQuickField name="relatedWords"}}
 				{{> afQuickField name="urlType" options="allowed"}}
+				{{> afQuickField name="language"}}
 			<div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 				<button type="reset" class="btn btn-default">Reset</button>
