--- a/client/newWord/newWord.html
+++ b/client/newWord/newWord.html
@@ -4,6 +4,7 @@
 			<legend>Add a new word</legend>
 				{{> afQuickField name="word"}}
 				{{> afQuickField name="description"}}
+				{{> afQuickField name="language"}}
 			<div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 				<button type="reset" class="btn btn-default">Reset</button>
