--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -15,12 +15,12 @@
 	        </div>
 	      </form>
 	    </div>
-
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="{{pathFor route="newWord"}}">{{_ "new_word"}}</a></li>
 	        <li><a href="{{pathFor route="newUrl"}}">{{_ "new_url"}}</a></li>
+	        <li>{{currentLanguage}}</li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
@@ -39,5 +39,5 @@
 </template>
 
 <template name="menuBtns">
-	
+
 </template>
