proper error-handling added to new word and url function

--- a/client/newUrl/newUrl.html
+++ b/client/newUrl/newUrl.html
@@ -1,7 +1,7 @@
 <template name="newUrl">
 	{{#autoForm schema=newUrlSchema id="newUrl" type="method" meteormethod="newUrl"}}
 		<fieldset>
-			<legend>Add a new word</legend>
+			<legend>{{_ "label_newUrl"}}</legend>
 				{{> afQuickField name="url"}}
 				{{> afQuickField name="description"}}
 				{{> afQuickField name="relatedWords"}}
