--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -1,43 +1,39 @@
 <template name="navBar">
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <form class="navbar-form navbar-left" role="search">
-	        <div class="form-group">
-						{{> EasySearch.Input index=wordsIndex}}
-	        </div>
-	      </form>
-	    </div>
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="{{pathFor route="newWord"}}">{{_ "new_word"}}</a></li>
-	        <li><a href="{{pathFor route="newUrl"}}">{{_ "new_url"}}</a></li>
-	        <li>{{currentLanguage}}</li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	          </ul>
-	        </li>
-	      	<li><a class="navbar-brand" href="{{pathFor route="home"}}">LEARN.XYZ</a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+	<nav class="navbar navbar-material-light-blue">
+		<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				</button>
+					<form class="navbar-form navbar-left" role="search">
+						<div class="form-group">
+						{{> EasySearch.Input index=wordsIndex attributes=attrInput}}
+						</div>
+					</form>
+			</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="{{pathFor route="newWord"}}">{{_ "new_word"}}</a></li>
+					<li><a href="{{pathFor route="newUrl"}}">{{_ "new_url"}}</a></li>
+					<li>{{currentLanguage}}</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Another action</a></li>
+							<li><a href="#">Something else here</a></li>
+							<li class="divider"></li>
+							<li><a href="#">Separated link</a></li>
+						</ul>
+					</li>
+					<li><a class="navbar-brand" href="{{pathFor route="home"}}">LEARN.XYZ</a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
-</template>
-
-<template name="menuBtns">
-
 </template>
