--- a/client/newWord/newWord.html
+++ b/client/newWord/newWord.html
@@ -1,10 +1,11 @@
 <template name="newWord">
+	{{> nfWarning}}
 	{{#autoForm schema=newWordSchema id="newWord" type="method" meteormethod="newWord"}}
 		<fieldset>
 			<legend>{{_ "label_newWord"}}</legend>
 				{{> afQuickField name="word"}}
 				{{> afQuickField name="description"}}
-				{{> afQuickField name="language"}}
+				{{> afQuickField name="language" id="field_language" value=fieldLanguage readonly=setReadOnly}}
 			<div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 				<button type="reset" class="btn btn-default">Reset</button>
